# pry_neumonia

./: .gitignore  Dockerfile  LICENSE  README.md  detector_neumonia.py  grad_cam.py  historial.csv  integrator.py  joselo121github  joselo121github.pub  main.py  model_loader.py  predictor.py  preprocess_img.py  pyproject.toml  read_img.py  requirements.txt
models/: model_loader.py
reports/: historial.csv
src/: detector_neumonia.py  grad_cam.py  integrator.py  predictor.py  preprocess_img.py  read_img.py
src/controller/: controller.py
tests/: conftest.py  test_preprocesar_predecir.py
