[project]
name = "uao-neumonia"
version = "0.1.0"
description = "Herramienta para la detección rápida de neumonía usando IA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT"}
dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pydicom>=3.0.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tensorflow==2.16.1",
    "tkcap==0.0.3",
    "img2pdf>=0.5.1",
]

[project.scripts]
detector-neumonia = "src.detector_neumonia:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
